Fix styling issues leading to overlapping content

--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,17 +1,5 @@
 @use "style-components";
 
-html {
-  height: 100%;
-}
-
-body {
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  padding-bottom: 40px; /* Space for settings bar */
-  box-sizing: border-box;
-}
-
 body {
   /*
   https://www.figma.com/plugin-docs/css-variables/
